tests/negative_pomidory/last_line_is_read.pomidor
Test case
first paragraph *click on #practice_menu_button

Second case
second paragraph *click on #practice_menu_button

first paragraph *click on #practice_menu_button
second paragraph *click on #name_field fdgfd